--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "ffmpeg-binaries": "^4.0.0",   
     "opusscript": "0.0.6"
   },
   "devDependencies": {},
