--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "discordbot",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "ffmpeg-binaries": "^4.0.0",   
-    "opusscript": "0.0.6"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js"
+    "start": "node main.js"
   },
   "author": "avonpubudu",
   "license": "ISC"
