--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "musicbot",
-  "version": "2.5.0",
-  "description": "discordbot",
-  "main": "main.js",
-  "dependencies": {
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start": "node main.js"
-  },
-  "author": "avonpubudu",
-  "license": "ISC"
+    "name": "nodemcu",
+    "version": "1.0.0",
+    "keywords": [
+        "util",
+        "functional",
+        "server",
+        "client",
+        "browser"
+    ],
+    "author": "Pubudu",
+    "contributors": [],
+    "dependencies": {
+        "discord.js": "^11.3.2",
+        "external-ip": "^2.0.3",
+        "xmlhttprequest": "^1.8.0"
+    }
 }
