--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "start": "node main.js"
     },
     "dependencies": {
-        "discord.js": "^11.3.2",
-        "xmlhttprequest": "^1.8.0"
+        "discord.js": "^11.3.2"
     }
 }
